--- a/Clients/Education-Platform/Views/Shared/_Layout.cshtml
+++ b/Clients/Education-Platform/Views/Shared/_Layout.cshtml
@@ -8,6 +8,13 @@
     <title>North Education</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a asp-controller="Course" asp-action="Index">Courses</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         @RenderBody()
     </main>
