--- a/Clients/Education-Platform/Views/Course/Index.cshtml
+++ b/Clients/Education-Platform/Views/Course/Index.cshtml
@@ -1,3 +1,5 @@
+@model IEnumerable<Education_Platform.ViewModels.CourseViewModel>
+
 @{
     ViewData["Title"] = "Our courses";
 }
@@ -5,5 +7,11 @@
 <h1>@ViewData["Title"]</h1>
 
 <section>
-    <p>Courses</p>
+    @foreach (var course in Model!)
+    {
+        <div>
+            <a asp-controller="Course" asp-action="Details">@course.Title</a>
+                <p>@course.CourseNumber</p>
+        </div>
+    }
 </section>
