--- a/Clients/Education-Platform/Views/Course/Create.cshtml
+++ b/Clients/Education-Platform/Views/Course/Create.cshtml
@@ -1,42 +1,33 @@
 @model Education_Platform.ViewModels.CreateCourseViewModel
 
-<h1 class="page-title">Lägg till ett nytt fordon</h1>
+<h1 class="page-title">Add a new course</h1>
 <section class="form-container">
-  <h4>Fordons information</h4>
+  <h4>Course information</h4>
   <form class="form" asp-action="Create" method="post">
     <div class="form-control">
-      <label asp-for="@Model!.RegNo"></label>
-      <input asp-for="@Model!.RegNo" />      
+      <label asp-for="@Model!.CourseNumber"></label>
+      <input asp-for="@Model!.CourseNumber" />      
     </div>
     <div class="form-control">
-      <label asp-for="@Model!.Make"></label>
-      <input asp-for="@Model!.Make" />      
+      <label asp-for="@Model!.Title"></label>
+      <input asp-for="@Model!.Title" />      
     </div>
     <div class="form-control">
-      <label asp-for="@Model!.Model"></label>
-      <input asp-for="@Model!.Model" />      
-    </div>
-    <div class="form-control">
-      <label asp-for="@Model!.ModelYear"></label>
-      <input asp-for="@Model!.ModelYear" />      
-    </div>
-    <div class="form-control">
-      <label asp-for="@Model!.Mileage"></label>
-      <input asp-for="@Model!.Mileage" />      
-    </div>
-    <div class="form-control">
-      <label asp-for="@Model!.ImageUrl"></label>
-      <input asp-for="@Model!.ImageUrl" />      
-    </div>
-    <div class="form-control">
-      <label asp-for="@Model!.Value"></label>
-      <input asp-for="@Model!.Value" />      
+      <label asp-for="@Model!.Duration"></label>
+      <input asp-for="@Model!.Duration" />      
     </div>
     <div class="form-control">
       <label asp-for="@Model!.Description"></label>
-      <textarea asp-for="@Model!.Description"></textarea>      
+      <input asp-for="@Model!.Description" />      
     </div>
-
-    <button type="submit" class="btn">Spara</button>
+    <div class="form-control">
+      <label asp-for="@Model!.Details"></label>
+      <input asp-for="@Model!.Details" />      
+    </div>
+    <div class="form-control">
+      <label asp-for="@Model!.Category"></label>
+      <input asp-for="@Model!.Category" />      
+    </div>
+    <button type="submit" class="btn">Save</button>
   </form>
 </section>
