--- a/Clients/Education-Platform/wwwroot/css/styles.css
+++ b/Clients/Education-Platform/wwwroot/css/styles.css
@@ -61,3 +61,13 @@ h2{
 .text-primary{
   color: cadetblue;
 }
+
+.galler-wrapper{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+
+.gallery-card{
+  
+}
