--- a/Clients/Education-Platform/Views/Course/Details.cshtml
+++ b/Clients/Education-Platform/Views/Course/Details.cshtml
@@ -6,7 +6,7 @@
 
 <article class="course-detail">
   <h1 class="page-title">@Model!.Title</h1>
-  @* <img src="@Model.ImageUrl" alt="@Model.Title"> *@
+  <img src="@Model.ImageUrl" alt="@Model.Title">
   <section class="course-description">
     <div>Course number: @Model.CourseNumber</div>
     <div>Duration: @Model.Duration</div>
