--- a/Clients/Education-Platform/Views/Course/Create.cshtml
+++ b/Clients/Education-Platform/Views/Course/Create.cshtml
@@ -28,6 +28,10 @@
       <label asp-for="@Model!.Category"></label>
       <input asp-for="@Model!.Category" />      
     </div>
+       <div class="form-control">
+      <label asp-for="@Model!.ImageUrl"></label>
+      <input asp-for="@Model!.ImageUrl" />      
+    </div>
     <button type="submit" class="btn">Save</button>
   </form>
 </section>
