--- a/Clients/Education-Admins/Views/Shared/_Layout.cshtml
+++ b/Clients/Education-Admins/Views/Shared/_Layout.cshtml
@@ -16,9 +16,8 @@
         <ul>
             <li><a asp-controller="Home" asp-action="Index">Start</a></li>
             <li><a asp-controller="Course" asp-action="Index">Courses</a></li>
-            <li><a asp-controller="Course" asp-action="Create">Add course</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a asp-controller="Teacher" asp-action="Index">Teachers</a></li>
+            <li><a asp-controller="Student" asp-action="Index">Students</a></li>
         </ul>        
     </nav>
     <main>
