--- a/Clients/Education-Admins/wwwroot/css/gallery-page.css
+++ b/Clients/Education-Admins/wwwroot/css/gallery-page.css
@@ -65,6 +65,37 @@
   background: rgba(0, 0, 0, 0.7);
 }
 
+.addCourseLabel{
+  color: #333;
+  font-style: normal;
+}
+
+a.courseBtn {
+  text-decoration: none;
+}
+
+.addCourseBtn{
+  cursor: pointer;
+  font-size: 2rem;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  align-items: center;
+  justify-content: center;
+  background: #f4f4f4;
+  padding: 1rem 1.5rem;
+  border: var(--border-color) solid 1px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.6);
+}
+
+.addCourseBtn:hover {
+  background: #5f9ea0;
+  color: #333;
+  font-weight: bold;
+}
+
 @media (max-width: 500px) {
   .gallery-wrapper {
     grid-template-columns: repeat(1, 1fr);
