--- a/Clients/Education-Admins/Views/Course/Create.cshtml
+++ b/Clients/Education-Admins/Views/Course/Create.cshtml
@@ -1,4 +1,10 @@
 @model Education_Admins.ViewModels.CreateCourseViewModel
+@inject Education_Admins.Models.TeacherServiceModel teacherList
+
+
+@{
+  ViewData["Title"] = "Teacher";
+}
 
 <h1 class="page-title">Add a new course</h1>
 <section class="form-container">
@@ -35,8 +41,21 @@
        </div>
        <div class="form-control">
       <label asp-for="@Model!.Teacher"></label>
-      <input asp-for="@Model!.Teacher" />      
     </div>
+
+      @* @foreach (var teacher in Model.Teacher)
+      
+        for(int i = 0; i < Model.Teacher; i++)
+        {
+          Teacher[i].FirstName;
+        } *@
+        
+
+      <label class="teacher-container">One
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+      </label>
+
     <button type="submit" class="btn">Save</button>
   </form>
 </section>
