--- a/Clients/Education-Admins/Views/Course/Create.cshtml
+++ b/Clients/Education-Admins/Views/Course/Create.cshtml
@@ -1,10 +1,9 @@
 @model Education_Admins.ViewModels.CreateCourseViewModel
-@inject Education_Admins.Models.TeacherServiceModel teacherList
 
 
 @{
-  ViewData["Title"] = "Teacher";
-}
+  ViewData["Title"] = "AddCourse";
+  }
 
 <h1 class="page-title">Add a new course</h1>
 <section class="form-container">
@@ -12,49 +11,37 @@
   <form class="form" asp-action="Create" method="post">
     <div class="form-control">
       <label asp-for="@Model!.CourseNumber"></label>
-      <input asp-for="@Model!.CourseNumber" />      
+      <input asp-for="@Model!.CourseNumber" />
     </div>
     <div class="form-control">
       <label asp-for="@Model!.Title"></label>
-      <input asp-for="@Model!.Title" />      
+      <input asp-for="@Model!.Title" />
     </div>
     <div class="form-control">
       <label asp-for="@Model!.Duration"></label>
-      <input asp-for="@Model!.Duration" />      
+      <input asp-for="@Model!.Duration" />
     </div>
     <div class="form-control">
       <label asp-for="@Model!.Description"></label>
-      <input asp-for="@Model!.Description" />      
+      <input asp-for="@Model!.Description" />
     </div>
     <div class="form-control">
       <label asp-for="@Model!.Details"></label>
-      <input asp-for="@Model!.Details" />      
+      <input asp-for="@Model!.Details" />
     </div>
     <div class="form-control">
       <label asp-for="@Model!.CategoryName"></label>
-      <input asp-for="@Model!.CategoryName" />      
+      <input asp-for="@Model!.CategoryName" />
     </div>
-       <div class="form-control">
+    <div class="form-control">
       <label asp-for="@Model!.ImageUrl"></label>
-      <input asp-for="@Model!.ImageUrl" />      
+      <input asp-for="@Model!.ImageUrl" />
     </div>
-       </div>
-       <div class="form-control">
-      <label asp-for="@Model!.Teacher"></label>
     </div>
-
-      @* @foreach (var teacher in Model.Teacher)
-      
-        for(int i = 0; i < Model.Teacher; i++)
-        {
-          Teacher[i].FirstName;
-        } *@
-        
-
-      <label class="teacher-container">One
-        <input type="checkbox" checked="checked">
-        <span class="checkmark"></span>
-      </label>
+    <div class="form-control">
+      <label asp-for="@Model!.TeacherId"></label>
+      <input asp-for="@Model!.TeacherId" />
+    </div>
 
     <button type="submit" class="btn">Save</button>
   </form>
