--- a/Clients/Education-Admins/wwwroot/css/course-detail-page.css
+++ b/Clients/Education-Admins/wwwroot/css/course-detail-page.css
@@ -6,9 +6,9 @@
 } 
 
 .course-detail img {
-  border: #888 solid 1px;
-  padding: 0.6rem;
-  width: 100%;
+  width: 50%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.6);
 }
 
 .course-description {
