--- a/Clients/Education-Admins/Views/Course/Create.cshtml
+++ b/Clients/Education-Admins/Views/Course/Create.cshtml
@@ -2,8 +2,8 @@
 
 
 @{
-  ViewData["Title"] = "AddCourse";
-  }
+  ViewBag.Title = "Add Course";
+}
 
 <h1 class="page-title">Add a new course</h1>
 <section class="form-container">
