--- a/Clients/Education-Admins/Views/Course/Details.cshtml
+++ b/Clients/Education-Admins/Views/Course/Details.cshtml
@@ -1,7 +1,7 @@
 @model Education_Admins.ViewModels.CourseViewModel
 
 @section styles{
-  <link rel="stylesheet" href="~/css/course-detail-page.css">
+<link rel="stylesheet" href="~/css/course-detail-page.css">
 }
 
 <article class="course-detail">
@@ -9,11 +9,16 @@
   <img src="@Model.ImageUrl" alt="@Model.Title">
   <section class="course-description">
     <div>Course number: @Model.CourseNumber</div>
-    <div>Duration: @Model.Duration</div>
-    <h2>Details: @Model.Details</h2>
+    <div>Duration: @Model.Duration hours</div>
+    <h2>@Model.Description</h2>
+    <p>@Model.Details</p>
     <hr>
-    <h4>Description</h4>
-    <p>@Model.Description</p>
+    <p>Category: @Model.CategoryName</p>
+    <p>Teacher: </p>
+    <div class="card-footer text-center">
+      <a asp-action="edit" asp-controller="Course" asp-route-id="@Model.CourseId" class="btn btn-primary">Edit</a>
+      <a asp-action="delete" asp-controller="Course" class="btn btn-danger">Delete</a>
+    </div>
     <a class="go-back" asp-action="Index"><i class="fa-solid fa-left-long"></i>Back to courses</a>
   </section>
 </article>
