--- a/Clients/Education-Admins/wwwroot/css/gallery-page.css
+++ b/Clients/Education-Admins/wwwroot/css/gallery-page.css
@@ -1,3 +1,43 @@
+.container {
+  overflow: hidden;
+}
+
+.filterDiv {
+  float: left;
+  background-color: #2196F3;
+  color: #ffffff;
+  width: 100px;
+  line-height: 100px;
+  text-align: center;
+  margin: 2px;
+  display: none; /* Hidden by default */
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #a7a5a5;
+  cursor: pointer;
+}
+
+/* Add a light grey background on mouse-over */
+.btn:hover {
+  background-color: #ddd;
+}
+
+/* Add a dark background to the active button */
+.btn.active {
+  background-color: #666;
+  color: white;
+}
+/* ___________________________________________________________________________________ */
 .gallery-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -91,7 +131,7 @@ a.courseBtn {
 }
 
 .addCourseBtn:hover {
-  background: #5f9ea0;
+  background: rgb(149, 148, 148);
   color: #333;
   font-weight: bold;
 }
