--- a/Clients/Education-Students/Views/Course/Details.cshtml
+++ b/Clients/Education-Students/Views/Course/Details.cshtml
@@ -1,4 +1,4 @@
-@model Education_Students.ViewModels.CourseViewModel
+@model Education_Admins.ViewModels.CourseViewModel
 
 @section styles{
   <link rel="stylesheet" href="~/css/course-detail-page.css">
@@ -9,11 +9,12 @@
   <img src="@Model.ImageUrl" alt="@Model.Title">
   <section class="course-description">
     <div>Course number: @Model.CourseNumber</div>
-    <div>Duration: @Model.Duration</div>
-    <h2>Details: @Model.Details</h2>
+    <div>Duration: @Model.Duration hours</div>
+    <h2>@Model.Description</h2>
+    <p>@Model.Details</p>
     <hr>
-    <h4>Description</h4>
-    <p>@Model.Description</p>
+    <p>Category: @Model.CategoryName</p>
+    <p>Teacher: </p>
     <a class="go-back" asp-action="Index"><i class="fa-solid fa-left-long"></i>Back to courses</a>
   </section>
 </article>
