--- a/Clients/Education-Students/Views/_ViewImports.cshtml
+++ b/Clients/Education-Students/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Education_Students
-@using Education_Students.Models
+﻿@using Education_Admins
+@using Education_Admins.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
