--- a/Clients/Education-Students/wwwroot/css/gallery-page.css
+++ b/Clients/Education-Students/wwwroot/css/gallery-page.css
@@ -1,3 +1,43 @@
+.container {
+  overflow: hidden;
+}
+
+.filterDiv {
+  float: left;
+  background-color: #2196F3;
+  color: #ffffff;
+  width: 100px;
+  line-height: 100px;
+  text-align: center;
+  margin: 2px;
+  display: none; /* Hidden by default */
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #a7a5a5;
+  cursor: pointer;
+}
+
+/* Add a light grey background on mouse-over */
+.btn:hover {
+  background-color: #ddd;
+}
+
+/* Add a dark background to the active button */
+.btn.active {
+  background-color: #666;
+  color: white;
+}
+/* ___________________________________________________________________________________ */
 .gallery-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -63,6 +103,37 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
+}
+
+.addCourseLabel{
+  color: #333;
+  font-style: normal;
+}
+
+a.courseBtn {
+  text-decoration: none;
+}
+
+.addCourseBtn{
+  cursor: pointer;
+  font-size: 2rem;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  align-items: center;
+  justify-content: center;
+  background: #f4f4f4;
+  padding: 1rem 1.5rem;
+  border: var(--border-color) solid 1px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.6);
+}
+
+.addCourseBtn:hover {
+  background: rgb(149, 148, 148);
+  color: #333;
+  font-weight: bold;
 }
 
 @media (max-width: 500px) {
