--- a/Clients/Education-Admins/Views/Course/Edit.cshtml
+++ b/Clients/Education-Admins/Views/Course/Edit.cshtml
@@ -1,9 +1,12 @@
+@using Education_Admins.Models
 @model Education_Admins.ViewModels.EditCourseViewModel
 
 @{
   ViewBag.Title = "Edit Course";
 }
-
+@{
+  var teachersViewData = ViewData["Teachers"];
+}
 <h1 class="page-title">Update Course</h1>
 <section class="form-container">
   <h4>Course information</h4>
@@ -38,8 +41,13 @@
     </div>
     </div>
     <div class="form-control">
-      <label asp-for="@Model!.TeacherId"></label>
-      <input asp-for="@Model!.TeacherId" />
+        <label for="teachers">Teacher</label>
+        <select id="teachers" name="teachers">
+          @* @foreach (var item in (IEnumerable<Teacher>!)ViewData["teachersViewData"])
+          {
+            <option value="@item.FirstName"></option>
+          } *@
+        </select>
     </div>
 
     <button type="submit" class="btn btn-primary">Update</button>
