--- a/Clients/Education-Admins/Views/Course/Create.cshtml
+++ b/Clients/Education-Admins/Views/Course/Create.cshtml
@@ -38,10 +38,10 @@
       <input asp-for="@Model!.ImageUrl" />
     </div>
     </div>
-    <div class="form-control">
+    @* <div class="form-control">
       <label asp-for="@Model!.TeacherId"></label>
       <input asp-for="@Model!.TeacherId" />
-    </div>
+    </div> *@
 
     <button type="submit" class="btn">Save</button>
   </form>
