--- a/Clients/Education-Admins/Views/Course/Index.cshtml
+++ b/Clients/Education-Admins/Views/Course/Index.cshtml
@@ -10,7 +10,7 @@
 
 <h1 class="page-title">@ViewData["Title"]</h1>
 
-<div id="myBtnContainer">
+<div id="viewByCategory">
 
     <button class="btn active" onclick="filterSelection('all')"> Show all</button>
     <button class="btn" onclick="filterSelection('asp.net core')"> ASP.NET Core</button>
@@ -60,7 +60,8 @@
                     class="btn btn-primary m-1">View</a>
                     <a asp-action="edit" asp-controller="Course" asp-route-id="@course.CourseId"
                     class="btn btn-primary m-1">Edit</a>
-                    <a href="#" class="btn btn-danger m-1">Delete</a>
+                    <a asp-action="delete" asp-controller="Course" asp-route-id="@course.CourseId"
+                    class="btn btn-danger m-1" onclick="return confirm(Are you sure you want to delete this course?)">Delete</a>
                 </div>
             </div>
         }
