--- a/Clients/Education-Admins/wwwroot/css/styles.css
+++ b/Clients/Education-Admins/wwwroot/css/styles.css
@@ -92,7 +92,11 @@ textarea {
   border-radius: 10px;
 }
 
-.btn-update {
+.btn-save {
+  background-color: rgb(90, 153, 104);
+}
+
+.btn-update{
   background-color: rgb(90, 153, 104);
 }
   
@@ -112,10 +116,12 @@ textarea {
 }
 
 .go-back {
+  display: block;
   font-size: 1.2rem;
   text-decoration: none;
   color: cadetblue;
   margin: 2rem 0;
+  text-align: center;
 }
 
 .form-container {
@@ -159,79 +165,4 @@ select{
   padding: 0.3rem 0.4rem;
   border-radius: 5px;
   outline: none !important;
-}
-
-/* _________________________________________________________________________________ */
-/* Customize the label (the container) */
-.teacher-container {
-  display: flex;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 20px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.teacher-container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 15px;
-  width: 15px;
-  border-radius: 5px;
-  background-color: #eee;
-}
-
-/* On mouse-over, add a grey background color */
-.teacher-container:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.teacher-container input:checked ~ .checkmark {
-  background-color: var(--primary-text-color);
-}
-
-.checkmark{
-background-color: #eee;
-border: var(--border-color) solid 1px;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.teacher-container input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.teacher-container .checkmark:after {
-  left: 4px;
-  top: 0.5px;
-  width: 3px;
-  height: 6px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
 }
