--- a/Clients/Education-Admins/Views/Course/Confirmation.cshtml
+++ b/Clients/Education-Admins/Views/Course/Confirmation.cshtml
@@ -1,3 +1,4 @@
 <h1 class="page-title">Course is saved!</h1>
 
-<a class="go-back" asp-action="Create"><i class="fa-solid fa-left-long"></i>Add a new course</a>
+<a class="go-back" asp-action="Create"><i class="fa-solid"></i>Add a new course</a>
+<a class="go-back" asp-action="Index"><i class="fa-solid fa-left-long"></i>Back to courses</a>
