--- a/Clients/Education-Admins/Views/Course/Index.cshtml
+++ b/Clients/Education-Admins/Views/Course/Index.cshtml
@@ -56,12 +56,12 @@
                 </a>
 
                 <div class="card-footer text-center">
-                    <a asp-controller="Course" asp-action="details" asp-route-id="@course.CourseId"
+                    <a asp-controller="Course" asp-action="Details" asp-route-id="@course.CourseId"
                     class="btn btn-primary m-1">View</a>
-                    <a asp-action="edit" asp-controller="Course" asp-route-id="@course.CourseId"
+                    <a asp-controller="Course" asp-action="Edit" asp-route-id="@course.CourseId"
                     class="btn btn-primary m-1">Edit</a>
-                    <a asp-action="delete" asp-controller="Course" asp-route-id="@course.CourseId"
-                    class="btn btn-danger m-1" onclick="return confirm(Are you sure you want to delete this course?)">Delete</a>
+                    <a asp-controller="Course" asp-action="Delete" asp-route-id="@course.CourseId"
+                    class="btn btn-danger m-1">Delete</a>
                 </div>
             </div>
         }
