--- a/Clients/Education-Admins/Views/Course/Delete.cshtml
+++ b/Clients/Education-Admins/Views/Course/Delete.cshtml
@@ -1,4 +1,4 @@
-@* @model Education_Admins.ViewModels.CourseViewModel
+@model Education_Admins.ViewModels.CourseViewModel
 
 @{
 ViewBag.Title = "Delete";
@@ -27,4 +27,4 @@ ViewBag.Title = "Delete";
       @Html.ActionLink("Back to List", "Index")
     </div>
   }
-</div> *@
+</div>
