--- a/Clients/Education-Admins/Views/Course/Index.cshtml
+++ b/Clients/Education-Admins/Views/Course/Index.cshtml
@@ -13,7 +13,7 @@
 <div id="viewByCategory">
 
     <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-    <button class="btn" onclick="filterSelection('asp.net core')"> ASP.NET Core</button>
+    <button class="btn" onclick="filterSelection('asp.netcore')"> ASP.NET Core</button>
     <button class="btn" onclick="filterSelection('sql')"> SQL</button>
     <button class="btn" onclick="filterSelection('.net')"> .NET</button>
     <button class="btn" onclick="filterSelection('javascript')"> JavaScript</button>
@@ -25,21 +25,18 @@
     <button class="btn" onclick="filterSelection('react')"> React</button>
 </div>
 <br>
-@* <div class="container">
-    <div class="filterDiv cars">BMW</div>
-    <div class="filterDiv colors fruits">Orange</div>
-    <div class="filterDiv cars">Volvo</div>
-    <div class="filterDiv colors">Red</div>
-    <div class="filterDiv cars animals">Mustang</div>
-    <div class="filterDiv colors">Blue</div>
-    <div class="filterDiv animals">Cat</div>
-    <div class="filterDiv animals">Dog</div>
-    <div class="filterDiv fruits">Melon</div>
-    <div class="filterDiv fruits animals">Kiwi</div>
-    <div class="filterDiv fruits">Banana</div>
-    <div class="filterDiv fruits">Lemon</div>
-    <div class="filterDiv animals">Cow</div>
-    </div> *@
+<div class="container">
+    <div class="filterDiv asp.netcore">ASP.NET Core</div>
+    <div class="filterDiv sql">SQL</div>
+    <div class="filterDiv .net">.NET</div>
+    <div class="filterDiv javascript">JavaScript</div>
+    <div class="filterDiv python">Python</div>
+    <div class="filterDiv java">Java</div>
+    <div class="filterDiv html">HTML</div>
+    <div class="filterDiv css">CSS</div>
+    <div class="filterDiv typescript">TypeScript</div>
+    <div class="filterDiv react">React</div>
+</div>
 
 
 <article>
