--- a/Clients/Education-Admins/Views/Course/Edit.cshtml
+++ b/Clients/Education-Admins/Views/Course/Edit.cshtml
@@ -40,10 +40,15 @@
     <div class="form-control">
       <label asp-for="@Model!.TeacherId"></label>
       <select asp-for="@Model!.TeacherId">
-        @foreach (var item in Model.TeacherList!)
+        @for(int i = 0; i < Model!.TeacherList!.Count; i++)
+        {
+          @* if (Model.TeacherList[i].FirstName == Model.TeacherList) *@
+          <option value="@Model.TeacherList[i]" selected>@Model.TeacherList</option>
+        }
+        @* @foreach (var item in Model.TeacherList!)
         {
           <option value="@item.TeacherId">Id: @item.TeacherId @item.FirstName @item.LastName</option>
-        }
+        } *@
       </select>
     </div>
     <button type="submit" class="btn btn-primary btn-update">Update</button>
